--- a/Unicap-arq2/res/values/strings.xml
+++ b/Unicap-arq2/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Unicap-arq2</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_audio">Audio</string>
+    <string name="speak">Speak</string>
 
 </resources>
