--- a/Unicap-arq2/res/values/strings.xml
+++ b/Unicap-arq2/res/values/strings.xml
@@ -6,5 +6,9 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_audio">Audio</string>
     <string name="speak"></string>
+    <string name="app">TextToSpeech</string>
+   <string name="text1">Text to Speech</string>
+   <string name="write">Write Text</string>
+    <string name="title_activity_texto_audio">TextoAudio</string>
 
 </resources>
